[gd_scene load_steps=28 format=3 uid="uid://73xvh87ssiju"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_is4dm"]
[ext_resource type="AudioStream" uid="uid://cn5dmu7wntvox" path="res://assets/sound/walk2.wav" id="2_dxte5"]
[ext_resource type="Script" path="res://Player/Hand.gd" id="2_wx6cq"]
[ext_resource type="AudioStream" uid="uid://byoro0oege015" path="res://assets/sound/jump2.wav" id="3_0bepy"]
[ext_resource type="Texture2D" uid="uid://cwo16wc0c0t7g" path="res://assets/slime_anim1.png" id="3_au3ie"]
[ext_resource type="AudioStream" uid="uid://bschfdufhfhgt" path="res://assets/sound/wallJump.wav" id="4_pa1d6"]
[ext_resource type="Texture2D" uid="uid://cyyagriyt1116" path="res://assets/slime_jumpupdown.png" id="4_vwkqf"]
[ext_resource type="Texture2D" uid="uid://c52cv34kdt2jw" path="res://assets/Effect.png" id="4_wmvch"]
[ext_resource type="AudioStream" uid="uid://bs8x103bcayo0" path="res://assets/sound/dash1.wav" id="5_oeb4l"]
[ext_resource type="PackedScene" uid="uid://cicobqfijtyqs" path="res://assets/sound/sfx_player.tscn" id="10_vy4da"]

[sub_resource type="Curve" id="Curve_1egim"]
min_value = -2.23517e-10
_data = [Vector2(0.0211864, 1), 0.0, 0.0, 0, 0, Vector2(0.504237, -2.23517e-10), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pkrtw"]
size = Vector2(19, 10.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tu0f"]
atlas = ExtResource("3_au3ie")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cv5pc"]
atlas = ExtResource("3_au3ie")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0jim"]
atlas = ExtResource("3_au3ie")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_at82s"]
atlas = ExtResource("3_au3ie")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwpbc"]
atlas = ExtResource("3_au3ie")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijdyv"]
atlas = ExtResource("3_au3ie")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7keff"]
atlas = ExtResource("3_au3ie")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnjvf"]
atlas = ExtResource("3_au3ie")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_glbvf"]
atlas = ExtResource("3_au3ie")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mash"]
atlas = ExtResource("4_vwkqf")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctlgq"]
atlas = ExtResource("4_vwkqf")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6raru"]
atlas = ExtResource("4_vwkqf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubkdi"]
atlas = ExtResource("4_vwkqf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_do8vf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tu0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cv5pc")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0jim")
}],
"loop": false,
"name": &"Stoping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_at82s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwpbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijdyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7keff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnjvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glbvf")
}],
"loop": true,
"name": &"Walk_loop",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mash")
}],
"loop": true,
"name": &"down",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctlgq")
}],
"loop": true,
"name": &"downdown",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6raru")
}],
"loop": true,
"name": &"up",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubkdi")
}],
"loop": true,
"name": &"upup",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_x6vtt"]

[node name="Player" type="CharacterBody2D"]
z_index = 10
script = ExtResource("1_is4dm")
sfx_walk = ExtResource("2_dxte5")
sfx_jump = ExtResource("3_0bepy")
sfx_wallJump = ExtResource("4_pa1d6")
sfx_dash = ExtResource("5_oeb4l")

[node name="ParticlesMove" type="CPUParticles2D" parent="."]
position = Vector2(9, -4)
amount = 50
fract_delta = false
draw_order = 1
texture = ExtResource("4_wmvch")
emission_shape = 4
emission_points = PackedVector2Array()
emission_colors = PackedColorArray()
particle_flag_align_y = true
gravity = Vector2(0, 25)
initial_velocity_min = 15.0
initial_velocity_max = 15.0
scale_amount_min = 0.5
scale_amount_max = 0.5
scale_amount_curve = SubResource("Curve_1egim")

[node name="ParticlesDash" type="CPUParticles2D" parent="."]
position = Vector2(9, -4)
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
fract_delta = false
draw_order = 1
texture = ExtResource("4_wmvch")
emission_shape = 4
emission_points = PackedVector2Array()
emission_colors = PackedColorArray()
particle_flag_align_y = true
direction = Vector2(0, 0)
gravity = Vector2(0, 25)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
scale_amount_min = 0.5
scale_amount_max = 0.5
scale_amount_curve = SubResource("Curve_1egim")

[node name="ParticlesWallSlide_R" type="CPUParticles2D" parent="."]
position = Vector2(14, -6)
amount = 15
fract_delta = false
draw_order = 1
texture = ExtResource("4_wmvch")
emission_shape = 4
emission_points = PackedVector2Array()
emission_colors = PackedColorArray()
particle_flag_align_y = true
direction = Vector2(0, 0)
spread = 20.0
gravity = Vector2(0, 0)
initial_velocity_min = 15.0
initial_velocity_max = 15.0
scale_amount_min = 0.5
scale_amount_max = 0.5
scale_amount_curve = SubResource("Curve_1egim")

[node name="ParticlesWallSlide_L" type="CPUParticles2D" parent="."]
position = Vector2(3, -7)
amount = 15
fract_delta = false
draw_order = 1
texture = ExtResource("4_wmvch")
emission_shape = 4
emission_points = PackedVector2Array()
emission_colors = PackedColorArray()
particle_flag_align_y = true
direction = Vector2(0, 0)
spread = 20.0
gravity = Vector2(0, 0)
initial_velocity_min = 15.0
initial_velocity_max = 15.0
scale_amount_min = 0.5
scale_amount_max = 0.5
scale_amount_curve = SubResource("Curve_1egim")

[node name="ParticlesJump" type="CPUParticles2D" parent="."]
position = Vector2(9, 0)
emitting = false
one_shot = true
explosiveness = 1.0
texture = ExtResource("4_wmvch")
direction = Vector2(0, -1)
spread = 100.0
gravity = Vector2(0, 10)
initial_velocity_min = 10.0
initial_velocity_max = 50.0
scale_amount_min = 0.5
scale_amount_max = 0.5
scale_amount_curve = SubResource("Curve_1egim")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9, -6.75)
shape = SubResource("RectangleShape2D_pkrtw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(9, -12)
sprite_frames = SubResource("SpriteFrames_do8vf")
animation = &"upup"

[node name="right_ray" type="RayCast2D" parent="."]
position = Vector2(18, -9)
target_position = Vector2(10, 0)

[node name="left_ray" type="RayCast2D" parent="."]
position = Vector2(0, -9)
target_position = Vector2(-10, 0)

[node name="Hand" type="Node2D" parent="."]
position = Vector2(9, -6)
script = ExtResource("2_wx6cq")

[node name="sfx_player" parent="." instance=ExtResource("10_vy4da")]
unique_name_in_owner = true

[node name="player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2(9, -8)
shape = SubResource("CircleShape2D_x6vtt")

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
